Fix spacing for paragraphs

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -24,6 +24,7 @@
 				font-size: 1.3em;
 				padding-right:60px;
 				line-height: 1.2em;
+				padding-bottom: 0.5em;
 				b {
 					margin-top: 30px;
 					font-weight: bold;
