--- a/scss/style.css
+++ b/scss/style.css
@@ -193,6 +193,7 @@ header {
   font-size: 1.3em;
   padding-right: 60px;
   line-height: 1.2em;
+  padding-bottom: 0.5em;
 }
 #content-container #about #history p b {
   margin-top: 30px;
